--- a/OneDo/OneDo.csproj
+++ b/OneDo/OneDo.csproj
@@ -118,8 +118,8 @@
     <Compile Include="Services\ModalService\IModalService.cs" />
     <Compile Include="Services\ModalService\ModalService.cs" />
     <Compile Include="Services\ModalService\SubModalService.cs" />
-    <Compile Include="Services\StringService\IStringService.cs" />
-    <Compile Include="Services\StringService\StringService.cs" />
+    <Compile Include="Services\StringService\IStringProvider.cs" />
+    <Compile Include="Services\StringService\StringProvider.cs" />
     <Compile Include="ViewModel\Args\DatePickerEventArgs.cs" />
     <Compile Include="Services\InfoService\InfoMessage.cs" />
     <Compile Include="ViewModel\Args\TimePickerEventArgs.cs" />
