--- a/OneDo/OneDo.csproj
+++ b/OneDo/OneDo.csproj
@@ -119,6 +119,7 @@
     <Compile Include="Services\InfoService\InfoMessageColors.cs" />
     <Compile Include="Services\InfoService\InfoMessageDurations.cs" />
     <Compile Include="Services\InfoService\InfoService.cs" />
+    <Compile Include="Services\ModalService\IModal.cs" />
     <Compile Include="Services\ModalService\IModalService.cs" />
     <Compile Include="Services\ModalService\ModalService.cs" />
     <Compile Include="Services\ModalService\SubModalService.cs" />
