--- a/OneDo/OneDo.csproj
+++ b/OneDo/OneDo.csproj
@@ -108,8 +108,8 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>BandTileLayout.msbtl</DependentUpon>
     </Compile>
-    <Compile Include="Common\UI\FlyoutExtensions.cs" />
-    <Compile Include="Common\UI\IExtendedCommand.cs" />
+    <Compile Include="Common\Extensions\FlyoutExtensions.cs" />
+    <Compile Include="Mvvm\IExtendedCommand.cs" />
     <Compile Include="Core\BackgroundTasks\InProcessTestBackgroundTask.cs" />
     <Compile Include="Services\BackgroundTaskService\BackgroundTaskParameters.cs" />
     <Compile Include="Services\BackgroundTaskService\BackgroundTaskService.cs" />
@@ -130,7 +130,7 @@
     <Compile Include="ViewModel\Args\DatePickerEventArgs.cs" />
     <Compile Include="Services\InfoService\InfoMessage.cs" />
     <Compile Include="ViewModel\Args\TimePickerEventArgs.cs" />
-    <Compile Include="ViewModel\Commands\RelayCommand.cs" />
+    <Compile Include="Mvvm\RelayCommand.cs" />
     <Compile Include="ViewModel\ConfirmationViewModel.cs" />
     <Compile Include="ViewModel\EditorViewModel.cs" />
     <Compile Include="ViewModel\DatePickerViewModel.cs" />
@@ -176,14 +176,14 @@
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Services\ProgressService\IProgressService.cs" />
     <Compile Include="Services\ProgressService\ProgressService.cs" />
-    <Compile Include="ViewModel\Commands\AsyncRelayCommand.cs" />
+    <Compile Include="Mvvm\AsyncRelayCommand.cs" />
     <Compile Include="ViewModel\FolderListViewModel.cs" />
     <Compile Include="ViewModel\ModalViewModel.cs" />
     <Compile Include="ViewModel\SettingsViewModel.cs" />
     <Compile Include="ViewModel\FolderItemObject.cs" />
     <Compile Include="ViewModel\NoteItemObject.cs" />
     <Compile Include="ViewModel\NoteEditorViewModel.cs" />
-    <Compile Include="ViewModel\ExtendedViewModel.cs" />
+    <Compile Include="Mvvm\ExtendedViewModel.cs" />
     <Compile Include="View\FolderListControl.xaml.cs">
       <DependentUpon>FolderListControl.xaml</DependentUpon>
     </Compile>
