--- a/OneDo.Api/OneDo.Api.csproj
+++ b/OneDo.Api/OneDo.Api.csproj
@@ -110,6 +110,20 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\OneDo.Api.rd.xml" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\OneDo.Common\OneDo.Common.csproj">
+      <Project>{bb75f101-ea41-4830-a0ab-d84dc2e3fba3}</Project>
+      <Name>OneDo.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\OneDo.Data\OneDo.Data.csproj">
+      <Project>{1711dc0d-dd6b-4111-9ea3-90bb913c5def}</Project>
+      <Name>OneDo.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\OneDo.Domain\OneDo.Domain.csproj">
+      <Project>{dadb853b-ca2c-4e7d-9c2b-056be93c0cde}</Project>
+      <Name>OneDo.Domain</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
