--- a/OneDo.Domain/OneDo.Domain.csproj
+++ b/OneDo.Domain/OneDo.Domain.csproj
@@ -107,8 +107,21 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\Entity.cs" />
+    <Compile Include="Entities\Folder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\IFolderRepository.cs" />
     <EmbeddedResource Include="Properties\OneDo.Domain.rd.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Services\" />
+    <Folder Include="ValueObjects\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\OneDo.Common\OneDo.Common.csproj">
+      <Project>{bb75f101-ea41-4830-a0ab-d84dc2e3fba3}</Project>
+      <Name>OneDo.Common</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
