--- a/OneDo.Domain/OneDo.Domain.csproj
+++ b/OneDo.Domain/OneDo.Domain.csproj
@@ -109,6 +109,7 @@
   <ItemGroup>
     <Compile Include="Entities\Entity.cs" />
     <Compile Include="Entities\Folder.cs" />
+    <Compile Include="Entities\Note.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\IFolderRepository.cs" />
     <EmbeddedResource Include="Properties\OneDo.Domain.rd.xml" />
