--- a/OneDo.Domain/OneDo.Domain.csproj
+++ b/OneDo.Domain/OneDo.Domain.csproj
@@ -107,17 +107,14 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entities\Entity.cs" />
-    <Compile Include="Entities\Folder.cs" />
-    <Compile Include="Entities\Note.cs" />
+    <Compile Include="Entity.cs" />
+    <Compile Include="Model\Folders\Folder.cs" />
+    <Compile Include="Model\Notes\Note.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositories\IFolderRepository.cs" />
+    <Compile Include="Model\Folders\IFolderRepository.cs" />
     <EmbeddedResource Include="Properties\OneDo.Domain.rd.xml" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Services\" />
-    <Folder Include="ValueObjects\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\OneDo.Common\OneDo.Common.csproj">
       <Project>{bb75f101-ea41-4830-a0ab-d84dc2e3fba3}</Project>
