--- a/OneDo.Domain/OneDo.Domain.csproj
+++ b/OneDo.Domain/OneDo.Domain.csproj
@@ -109,6 +109,7 @@
   <ItemGroup>
     <Compile Include="Entity.cs" />
     <Compile Include="Model\Folders\Folder.cs" />
+    <Compile Include="Model\Folders\Note.cs" />
     <Compile Include="Model\Notes\Note.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Model\Folders\IFolderRepository.cs" />
