--- a/OneDo.Domain/OneDo.Domain.csproj
+++ b/OneDo.Domain/OneDo.Domain.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Model\Folders\IFolderRepository.cs" />
     <Compile Include="Specification.cs" />
+    <Compile Include="ValueObject.cs" />
     <EmbeddedResource Include="Properties\OneDo.Domain.rd.xml" />
   </ItemGroup>
   <ItemGroup />
