--- a/OneDo.Data/OneDo.Data.csproj
+++ b/OneDo.Data/OneDo.Data.csproj
@@ -111,9 +111,12 @@
     <Compile Include="Entities\IEntity.cs" />
     <Compile Include="Entities\Note.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositories\FolderRepository.cs" />
+    <Compile Include="Repositories\ICommandRepository.cs" />
+    <Compile Include="Repositories\IQueryRepository.cs" />
     <Compile Include="Repositories\IRepository.cs" />
+    <Compile Include="Repositories\IRepositoryFactory.cs" />
     <Compile Include="Repositories\Repository.cs" />
+    <Compile Include="Repositories\RepositoryFactory.cs" />
     <EmbeddedResource Include="Properties\OneDo.Data.rd.xml" />
   </ItemGroup>
   <ItemGroup />
