--- a/OneDo.Domain/OneDo.Domain.csproj
+++ b/OneDo.Domain/OneDo.Domain.csproj
@@ -107,17 +107,15 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DomainEvents.cs" />
-    <Compile Include="Entity.cs" />
-    <Compile Include="IDomainEvent.cs" />
-    <Compile Include="IHandle.cs" />
-    <Compile Include="Model\Folders\Folder.cs" />
-    <Compile Include="Model\Folders\Note.cs" />
-    <Compile Include="Model\Notes\Note.cs" />
+    <Compile Include="Common\Entity.cs" />
+    <Compile Include="Model\ValueObjects\Color.cs" />
+    <Compile Include="Model\Entities\Folder.cs" />
+    <Compile Include="Model\TodayNoteSpecification.cs" />
+    <Compile Include="Model\Entities\Note.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Model\Folders\IFolderRepository.cs" />
-    <Compile Include="Specification.cs" />
-    <Compile Include="ValueObject.cs" />
+    <Compile Include="Services\DateTimeService.cs" />
+    <Compile Include="Common\Specification.cs" />
+    <Compile Include="Common\ValueObject.cs" />
     <EmbeddedResource Include="Properties\OneDo.Domain.rd.xml" />
   </ItemGroup>
   <ItemGroup />
