--- a/OneDo.Api/OneDo.Application.csproj
+++ b/OneDo.Api/OneDo.Application.csproj
@@ -108,19 +108,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Api.cs" />
-    <Compile Include="Core\CommandDispatcher.cs" />
-    <Compile Include="Core\ICommandDispatcher.cs" />
-    <Compile Include="Core\QueryFactory.cs" />
-    <Compile Include="Queries\FolderDTO.cs" />
-    <Compile Include="Commands\FolderCommandHandler.cs" />
+    <Compile Include="Commands\Folders\SaveFolderCommand.cs" />
+    <Compile Include="Core\CommandBus.cs" />
+    <Compile Include="Core\ICommandBus.cs" />
+    <Compile Include="Queries\Folders\FolderModel.cs" />
+    <Compile Include="Commands\Folders\FolderCommandHandler.cs" />
     <Compile Include="Common\ICommand.cs" />
     <Compile Include="Common\ICommandHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Queries\FolderQuery.cs" />
-    <Compile Include="Queries\IFolderQuery.cs" />
-    <Compile Include="Services\DataService\DataService.cs" />
-    <Compile Include="Services\DataService\IDataService.cs" />
-    <Compile Include="Services\QueryService\FolderQueryService.cs" />
+    <Compile Include="Queries\Folders\FolderQuery.cs" />
+    <Compile Include="Queries\Folders\IFolderQuery.cs" />
     <EmbeddedResource Include="Properties\OneDo.Api.rd.xml" />
   </ItemGroup>
   <ItemGroup>
