--- a/OneDo.Data/OneDo.Data.csproj
+++ b/OneDo.Data/OneDo.Data.csproj
@@ -107,16 +107,20 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entities\Folder.cs" />
+    <Compile Include="Entities\FolderData.cs" />
     <Compile Include="Entities\IEntity.cs" />
-    <Compile Include="Entities\Note.cs" />
+    <Compile Include="Entities\NoteData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\Domain\FolderRepository.cs" />
+    <Compile Include="Repositories\Domain\NoteRepository.cs" />
     <Compile Include="Repositories\ICommandRepository.cs" />
     <Compile Include="Repositories\IQueryRepository.cs" />
     <Compile Include="Repositories\IRepository.cs" />
     <Compile Include="Repositories\IRepositoryFactory.cs" />
     <Compile Include="Repositories\Repository.cs" />
     <Compile Include="Repositories\RepositoryFactory.cs" />
+    <Compile Include="Services\DataService\DataService.cs" />
+    <Compile Include="Services\DataService\IDataService.cs" />
     <EmbeddedResource Include="Properties\OneDo.Data.rd.xml" />
   </ItemGroup>
   <ItemGroup />
