--- a/OneDo.Api/OneDo.Application.csproj
+++ b/OneDo.Api/OneDo.Application.csproj
@@ -110,6 +110,10 @@
     <Compile Include="Api.cs" />
     <Compile Include="Commands\Folders\DeleteFolderCommand.cs" />
     <Compile Include="Commands\Folders\SaveFolderCommand.cs" />
+    <Compile Include="Commands\Notes\DeleteNoteCommand.cs" />
+    <Compile Include="Commands\Notes\NoteCommandHandler.cs" />
+    <Compile Include="Commands\Notes\SaveNoteCommand.cs" />
+    <Compile Include="Commands\Notes\SetNoteFlagCommand.cs" />
     <Compile Include="Core\CommandBus.cs" />
     <Compile Include="Core\ICommandBus.cs" />
     <Compile Include="Queries\Folders\FolderModel.cs" />
@@ -119,6 +123,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queries\Folders\FolderQuery.cs" />
     <Compile Include="Queries\Folders\IFolderQuery.cs" />
+    <Compile Include="Queries\Notes\INoteQuery.cs" />
+    <Compile Include="Queries\Notes\NoteModel.cs" />
+    <Compile Include="Queries\Notes\NoteQuery.cs" />
     <EmbeddedResource Include="Properties\OneDo.Api.rd.xml" />
   </ItemGroup>
   <ItemGroup>
