Přejmenován namespace OneDo.Common.Metadata na OneDo.Common.Meta

--- a/OneDo.Common/OneDo.Common.csproj
+++ b/OneDo.Common/OneDo.Common.csproj
@@ -118,10 +118,10 @@
     <Compile Include="Logging\LoggerBase.cs" />
     <Compile Include="Logging\MemoryLogger.cs" />
     <Compile Include="Logging\NullLogger.cs" />
-    <Compile Include="Metadata\ApiContract.cs" />
-    <Compile Include="Metadata\ApiInformationHelper.cs" />
-    <Compile Include="Metadata\DeviceFormFactorType.cs" />
-    <Compile Include="Metadata\DeviceTypeHelper.cs" />
+    <Compile Include="Meta\ApiContract.cs" />
+    <Compile Include="Meta\ApiInformationHelper.cs" />
+    <Compile Include="Meta\DeviceFormFactorType.cs" />
+    <Compile Include="Meta\DeviceTypeHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\OneDo.Common.rd.xml" />
   </ItemGroup>
