WIP: opravy (už to jde přeložit a spustit)

--- a/OneDo/OneDo.csproj
+++ b/OneDo/OneDo.csproj
@@ -120,15 +120,16 @@
     <Compile Include="Services\ToastService\ToastService.cs" />
     <Compile Include="ViewModel\Args\DatePickerEventArgs.cs" />
     <Compile Include="Services\InfoService\InfoMessage.cs" />
-    <Compile Include="ViewModel\Args\EntityModelEventArgs.cs" />
+    <Compile Include="ViewModel\Args\EntityEventArgs.cs" />
     <Compile Include="ViewModel\Args\TimePickerEventArgs.cs" />
     <Compile Include="Common\Mvvm\RelayCommand.cs" />
     <Compile Include="ViewModel\ConfirmationViewModel.cs" />
     <Compile Include="ViewModel\EditorViewModel.cs" />
     <Compile Include="ViewModel\DatePickerViewModel.cs" />
     <Compile Include="ViewModel\IFolderCommands.cs" />
+    <Compile Include="ViewModel\IListCommandsCommands.cs" />
     <Compile Include="ViewModel\INoteCommands.cs" />
-    <Compile Include="ViewModel\ItemObject.cs" />
+    <Compile Include="ViewModel\ItemViewModel.cs" />
     <Compile Include="ViewModel\ColorItemObject.cs" />
     <Compile Include="ViewModel\DebugViewModel.cs" />
     <Compile Include="ViewModel\FolderEditorViewModel.cs" />
@@ -172,8 +173,8 @@
     <Compile Include="ViewModel\FolderListViewModel.cs" />
     <Compile Include="ViewModel\ModalViewModel.cs" />
     <Compile Include="ViewModel\SettingsViewModel.cs" />
-    <Compile Include="ViewModel\FolderItemObject.cs" />
-    <Compile Include="ViewModel\NoteItemObject.cs" />
+    <Compile Include="ViewModel\FolderItemViewModel.cs" />
+    <Compile Include="ViewModel\NoteItemViewModel.cs" />
     <Compile Include="ViewModel\NoteEditorViewModel.cs" />
     <Compile Include="Common\Mvvm\ExtendedViewModel.cs" />
     <Compile Include="View\FolderListControl.xaml.cs">
