--- a/OneDo/OneDo.csproj
+++ b/OneDo/OneDo.csproj
@@ -122,6 +122,7 @@
     <Compile Include="ViewModel\Args\DatePickerEventArgs.cs" />
     <Compile Include="Services\InfoService\InfoMessage.cs" />
     <Compile Include="ViewModel\Args\EntityEventArgs.cs" />
+    <Compile Include="ViewModel\Args\SelectionChangedEventArgs.cs" />
     <Compile Include="ViewModel\Args\TimePickerEventArgs.cs" />
     <Compile Include="Common\Mvvm\RelayCommand.cs" />
     <Compile Include="ViewModel\ConfirmationViewModel.cs" />
@@ -153,9 +154,8 @@
     <Compile Include="View\DatePicker.xaml.cs">
       <DependentUpon>DatePicker.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\ModalContainer.xaml.cs">
-      <DependentUpon>ModalContainer.xaml</DependentUpon>
-    </Compile>
+    <Compile Include="View\ExtendedContentControl.cs" />
+    <Compile Include="View\ModalContainer.cs" />
     <Compile Include="View\NoteListControl.xaml.cs">
       <DependentUpon>NoteListControl.xaml</DependentUpon>
     </Compile>
@@ -259,10 +259,6 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="View\FolderListControl.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="View\ModalContainer.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
