--- a/OneDo/OneDo.csproj
+++ b/OneDo/OneDo.csproj
@@ -138,8 +138,8 @@
     <Compile Include="ViewModel\Parameters\SettingsParameters.cs" />
     <Compile Include="ViewModel\NoteListViewModel.cs" />
     <Compile Include="ViewModel\TimePickerViewModel.cs" />
-    <Compile Include="ViewModel\UIHost.cs" />
-    <Compile Include="View\AnimationInfo.cs" />
+    <Compile Include="Core\UIHost.cs" />
+    <Compile Include="Common\UI\AnimationInfo.cs" />
     <Compile Include="View\Behaviors\CommandBarBehavior.cs" />
     <Compile Include="View\Behaviors\TextBoxBehavior.cs" />
     <Compile Include="View\Behaviors\OpenFlyoutMenuBehavior.cs" />
