--- a/OneDo/OneDo.csproj
+++ b/OneDo/OneDo.csproj
@@ -99,6 +99,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Common\Args\DateChangedEventArgs.cs" />
     <Compile Include="Common\Extensions\FlyoutExtensions.cs" />
     <Compile Include="Common\Mvvm\IExtendedCommand.cs" />
     <Compile Include="Core\BackgroundTasks\InProcessTestBackgroundTask.cs" />
@@ -114,7 +115,6 @@
     <Compile Include="Services\StringService\StringProvider.cs" />
     <Compile Include="Services\ToastService\IToastService.cs" />
     <Compile Include="Services\ToastService\ToastService.cs" />
-    <Compile Include="ViewModel\Args\DatePickerEventArgs.cs" />
     <Compile Include="Services\InfoService\InfoMessage.cs" />
     <Compile Include="ViewModel\Args\EntityEventArgs.cs" />
     <Compile Include="ViewModel\Args\SelectionChangedEventArgs.cs" />
@@ -122,7 +122,6 @@
     <Compile Include="Common\Mvvm\RelayCommand.cs" />
     <Compile Include="ViewModel\ConfirmationViewModel.cs" />
     <Compile Include="ViewModel\EditorViewModel.cs" />
-    <Compile Include="ViewModel\DatePickerViewModel.cs" />
     <Compile Include="ViewModel\IFolderCommands.cs" />
     <Compile Include="ViewModel\IListCommandsCommands.cs" />
     <Compile Include="ViewModel\INoteCommands.cs" />
