--- a/OneDo.Api/OneDo.Application.csproj
+++ b/OneDo.Api/OneDo.Application.csproj
@@ -118,6 +118,7 @@
     <Compile Include="Common\IEntityModel.cs" />
     <Compile Include="Core\CommandBus.cs" />
     <Compile Include="Core\ICommandBus.cs" />
+    <Compile Include="Core\TinyMessenger.cs" />
     <Compile Include="Queries\Folders\FolderModel.cs" />
     <Compile Include="Commands\Folders\FolderCommandHandler.cs" />
     <Compile Include="Common\ICommand.cs" />
@@ -144,7 +145,9 @@
       <Name>OneDo.Domain</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Events\" />
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
