--- a/OneDo.Common/OneDo.Common.csproj
+++ b/OneDo.Common/OneDo.Common.csproj
@@ -127,6 +127,7 @@
     <Compile Include="Meta\DeviceFormFactorType.cs" />
     <Compile Include="Meta\DeviceTypeHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TinyMessenger.cs" />
     <EmbeddedResource Include="Properties\OneDo.Common.rd.xml" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
