--- a/OneDo/OneDo.csproj
+++ b/OneDo/OneDo.csproj
@@ -118,7 +118,7 @@
     <Compile Include="Services\ToastService\ToastService.cs" />
     <Compile Include="Services\InfoService\InfoMessage.cs" />
     <Compile Include="ViewModel\Args\EntityEventArgs.cs" />
-    <Compile Include="ViewModel\Args\SelectionChangedEventArgs.cs" />
+    <Compile Include="Core\Args\SelectionChangedEventArgs.cs" />
     <Compile Include="ViewModel\Args\TimePickerEventArgs.cs" />
     <Compile Include="Common\Mvvm\RelayCommand.cs" />
     <Compile Include="ViewModel\ConfirmationViewModel.cs" />
